<resources>
    <string name="app_name">MyApplication</string>
    <string name="testmain_title">English learn</string>
    <string name="menu_test">菜单测试</string>
    <string name="menu_base_test">菜单</string>
    <string name="title_activity_list_view_height_change">ListViewHeightChange</string>
    <string name="menu_delete">Delete</string>
    <string name="login">登陆</string>
    <string name="sentence_btn">Sentences</string>
    <string name="grammar_btn">Grammars</string>
    <string name="search_btn">Search</string>
    <string name="search_sentences_btn">SearchSentences</string>
    <string name="registeruser_btn">Register User</string>
    <string name="loginuser_btn">Login User</string>
    <string name="updateuser_btn">Update User</string>
    <string name="messagesource_btn">messagesource</string>
    <string name="tractatetype_btn">tractatetype</string>
    <string name="word_btn">word</string>
    <string name="wordgroup_btn">wordgroup</string>
    <string name="wordgroupcollect_btn">wordgroupcollect</string>
    <string name="sentencegroup_btn">sentencegroup</string>
    <string name="sentencegroupcollect_btn">sentencegroupcollect</string>
    <string name="tractategroup_btn">tractategroup</string>
    <string name="wordcollect_btn">wordcollect</string>
    <string name="sentencecollect_btn">sentencecollect</string>
    <string name="tractatecollect_btn">tractatecollect</string>
    <string name="sentences_title">Sentences</string>
    <string name="sentences_menu_edit">Edit</string>
    <string name="sentences_menu_setting">Setting</string>
    <string name="sentences_edit_allselect">all select</string>
    <string name="grammar_title">Grammars</string>
    <string name="grammars_menu_edit">Edit</string>
    <string name="grammars_menu_setting">Setting</string>
    <string name="edit_delete">Delete</string>
    <string name="delete_result" formatted="false">Delete success %d,fail %d.</string>
    <string name="menu_cancel">Cancel</string>
    <string name="addsentence_title">Add Sentence</string>
    <string name="editsentence_title">Edit Sentence</string>
    <string name="content_hilnt">Content</string>
    <string name="translation_hilnt">Enter your translation here</string>
    <string name="addsentencesuccess">add success</string>
    <string name="addgrammar_title">Add Grammar</string>
    <string name="editgrammar_title">Edit Grammar</string>
    <string name="grammar_name_hilnt">name</string>
    <string name="grammar_content_hilnt">Enter your content here</string>
    <string name="addgrammarsuccess">add success</string>
    <string name="grammardetail_title">Grammar Detail</string>
    <string name="grammardetail_empty_grammar">do not found grammar</string>
    <string name="sentencedetail1_title">Sentence Detail</string>
    <string name="sentencedetail_empty_sentence">do not found sentence</string>
    <string name="detail_delete_confirm">Are you sure to Delete</string>
    <string name="detail_delete">Delete</string>
    <string name="detail_cancel">Cancel</string>
    <string name="detail_deletefail">delete Fail</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Sentence Grammar....</string>
    <string name="search_sentences">Search Sentence</string>
    <string name="searchsingle_title">Search Single</string>
    <string name="searchsingle_hint">Search Sentence Grammar....</string>
    <string name="loadmore">正在加载中...</string>
    <string name="loadfail">加载出错了....</string>
    <string name="reload">服务器开小差了，点击重新加载</string>
    <string name="notmore">没有更多了</string>
    <string name="common_title">Common</string>
    <string name="register_title">RegisterUser</string>
    <string name="registersuccess">注册成功</string>
    <string name="registerandloginsuccess">注册并登陆成功</string>
    <string name="username">用户名:</string>
    <string name="email">邮箱:</string>
    <string name="mobile">手机:</string>
    <string name="smscode">验证码:</string>
    <string name="password">密码:</string>
    <string name="oldpassword">旧密码:</string>
    <string name="newpassword">新密码:</string>
    <string name="registerbyname">用户名+密码注册</string>
    <string name="registerbyemail">邮箱+密码注册</string>
    <string name="registerbymobile">手机+验证码注册并登陆</string>
    <string name="emailverify">认证邮箱</string>
    <string name="smscodeverify">认证短信验证码</string>
    <string name="requestsmscode">获取验证码</string>
    <string name="resetpwdbyemail">邮箱重置</string>
    <string name="resetpwdbysmscode">短信重置</string>
    <string name="resetpwdbyoldpwd">旧密码重置</string>
    <string name="loginsuccess">登陆成功</string>
    <string name="updatesuccess">更新成功</string>
    <string name="loginname">用户名登陆</string>
    <string name="loginmail">邮箱登陆</string>
    <string name="loginmobile">手机+密码登陆</string>
    <string name="logout">注销</string>
    <string name="updateuser">更新用户信息</string>
    <string name="alreadysendmail">已经发送重置密码邮件，请点击链接修改密码</string>
    <string name="alreadysendverifymail">已经发送邮箱验证邮件，请点击链接验证</string>
    <string name="smscodeverifysuccess">手机验证成功</string>
    <string name="sendmailfail">发送邮件失败，请检查网絡或邮件地址是否正确</string>
    <string name="resetpasswordsuccess">密码修改成功</string>
    <string name="login_title">LoginUser</string>
    <string name="updateuser_title">UpdateUser</string>
    <string name="phoneticssymbols_title">音标</string>
    <string name="messagesource_title">MessageSource</string>
    <string name="messagesource_name">名称:</string>
    <string name="messagesource_id">Id:</string>
    <string name="messagesource_add">增加信息来源</string>
    <string name="messagesource_delete">删除信息来源</string>
    <string name="messagesource_update">修改信息来源</string>
    <string name="messagesource_get">获取所有信息来源</string>
    <string name="messagesource_getbyid">获取单条信息来源</string>
    <string name="addmessagesource_success">增加信息来源成功</string>
    <string name="deletemessagesource_success">删除信息来源成功</string>
    <string name="updatemessagesource_success">更新信息来源成功</string>
    <string name="getmessagesource_success">获取信息来源成功</string>
    <string name="tractatetype_title">TractateType</string>
    <string name="tractatetype_name">名称:</string>
    <string name="tractatetype_id">Id:</string>
    <string name="tractatetype_add">增加文章分类</string>
    <string name="tractatetype_delete">删除文章分类</string>
    <string name="tractatetype_update">修改文章分类</string>
    <string name="tractatetype_get">获取所有文章分类</string>
    <string name="tractatetype_getbyid">获取单条文章分类</string>
    <string name="addtractatetype_success">增加信息来源成功</string>
    <string name="deletetractatetype_success">删除信息来源成功</string>
    <string name="updatetractatetype_success">更新信息来源成功</string>
    <string name="gettractatetype_success">获取信息来源成功</string>
    <string name="word_title">Word</string>
    <string name="favoritesuccess">收藏成功</string>
    <string name="unfavoritesuccess">取消收藏成功</string>
    <string name="favoritefail">收藏失败，请稍后再試</string>
    <string name="unfavoritefail">取消收藏失败，请稍后再試</string>
    <string name="words_nameunique">名称不能重复</string>
    <string name="updatewordgroupsuccess">更新成功</string>
    <string name="deletesuccess">删除成功</string>
    <string name="wordgroup_title">WordGroup</string>
    <string name="wordgroups_title">词单</string>
    <string name="wordgroups_nameunique">名称不能重复</string>
    <string name="createwordgroupsuccess">创建成功</string>
    <string name="tractate_title">Tractate</string>
    <string name="wordgroupcollect_title">WordGroupCollect</string>
    <string name="sentencegroup_title">SentenceGroup</string>
    <string name="sentencegroupcollect_title">SentenceGroupCollect</string>
    <string name="tractategroup_title">TractateGroup</string>
    <string name="wordcollect_title">WordCollect</string>
    <string name="sentencecollect_title">SentenceCollect</string>
    <string name="tractatecollect_title">TractateCollect</string>
    <string name="title_setting">设置</string>
    <string name="networkerror">服务器开小差了，请稍后再試</string>
    <string name="bmoberror">请求服务器出錯:%s</string>
    <string name="networknotconnected">网络未连接，请检查网络设置</string>
    <string name="elementary">基础</string>
    <string name="intermediate">中級</string>
    <string name="advanced">高级</string>
    <string-array name="main_tablayout">
        <item>基础</item>
        <item>中級</item>
        <item>高级</item>
    </string-array>
    <string-array name="elementary_tablayout">
        <item>音标</item>
        <item>语法</item>
    </string-array>
    <string-array name="intermediate_tablayout">
        <item>词单</item>
        <item>短语</item>
    </string-array>
    <string-array name="wordgroups_tablayout">
        <item>热门推荐</item>
        <item>我的词单</item>
        <item>我的收藏</item>
    </string-array>
    <string-array name="advanced_tablayout">
        <item>短文</item>
        <item>电影</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_guest_title">登陆后收藏自己感兴趣的内容</string>
    <string name="navigation_drawer_loginandregister">登陆/注册</string>
    <string name="navigation_drawer_home">学习中心</string>
    <string name="navigation_drawer_setting">设置</string>
    <string name="navigation_drawer_dict">离线词典</string>
    <string name="action_settings">Settings</string>
    <string name="title_phoneticsdetail">PhoneticsDetail</string>
    <string name="title_phoneticssymbolsdetail">PhoneticsSymbolsDetail</string>
    <string name="title_语法列表">语法列表</string>
    <string name="title_grammardetail">GrammarDetail</string>
    <string name="title_words">Words</string>
    <string name="title_worddetail">WordDetail</string>
    <string name="title_sentence">Sentence</string>
    <string-array name="sentenceactivity_tablayout">
        <item>热门推荐</item>
        <item>我的句子</item>
        <item>收藏的句子</item>
        <item>收藏的句单</item>
    </string-array>
    <string name="title_sentences">Sentences</string>
    <string name="title_tractategroups">TractateGroups</string>
    <string-array name="tractategroupsactivity1_tablayout">
        <item>文章中心</item>
        <item>我的文章</item>
        <item>我的收藏</item>

    </string-array>
    <string-array name="tractatestopactivity_tablayout">
        <item>热门文章</item>
        <item>热门系列</item>
    </string-array>
    <string name="title_tractates">Tractates</string>
    <string name="title_tractatedetail">TractateDetail</string>
    <string-array name="tractatesactivity_tablayout">
        <item>Fragment1</item>
        <item>Fragment2</item>
    </string-array>
    <string name="title_addtractate">添加文章</string>
    <string name="nameunique">名称不能重复</string>
    <string name="createsuccess">创建成功</string>
    <string name="title_tractatepreview">TractatePreview</string>
    <string name="title_wordcollect">WordCollect</string>
    <string name="title_sentencecollect">SentenceCollect</string>
    <string name="title_multiple">Multiple</string>
    <string name="title_dict">Dict</string>
    <string name="title_musicplay">MusicPlay</string>
    <string name="title_clipboard">Clipboard</string>
</resources>